<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/main_margin"
        card_view:cardCornerRadius="@dimen/corner_radius"
        card_view:cardElevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/sub_margin"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/auto_localizing"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="16dp" />

            <Switch
                android:id="@+id/sw_auto_localize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        card_view:cardCornerRadius="@dimen/corner_radius"
        card_view:cardElevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/sub_margin"
                android:layout_marginRight="@dimen/sub_margin"
                android:layout_marginTop="@dimen/sub_margin"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/air_help"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="16dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/pm25_very_low"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/pm25_low"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/pm25_normal"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/pm25_high"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/pm25_very_high"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="6dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@color/pm25_very_low" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="6dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@color/pm25_low" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="6dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@color/pm25_normal" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="6dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@color/pm25_high" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="6dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@color/pm25_very_high" />
            </TableRow>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    z

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/main_margin"
        card_view:cardCornerRadius="@dimen/corner_radius"
        card_view:cardElevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/sub_margin"
                android:gravity="center_vertical"
                android:text="@string/data_source"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="http://opendata.epa.gov.tw/"
                android:textAppearance="?android:attr/textAppearanceSmall" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        card_view:cardCornerRadius="@dimen/corner_radius"
        card_view:cardElevation="@dimen/cardview_default_elevation">
        <TextView
            android:id="@+id/version"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Version:"/>
        </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/main_padding">

    </LinearLayout>
</LinearLayout>