<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:background="@color/background">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="32dp"
            android:layout_gravity="center"
            >

            <at.grabner.circleprogress.CircleProgressView
                android:layout_width="132dp"
                android:layout_height="132dp"
                android:id="@+id/circleProgress"
                app:cpv_textSize="32dp"
                app:cpv_unitSize="14dp"
                app:cpv_unitColor="@android:color/white"
                app:cpv_unitPosition="bottom"
                app:cpv_rimWidth="18dp"
                app:cpv_barWidth="18dp"
                android:layout_gravity="center_vertical" />

        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ic_psi"
                    android:src="@mipmap/ic_bubble_chart_black_24dp"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PSI"
                    android:id="@+id/textView23"
                    android:layout_margin="4dp"
                    android:textSize="17dp"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ic_pm25"
                    android:src="@mipmap/ic_bubble_chart_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/pm25"
                    android:id="@+id/textView24"
                    android:layout_margin="4dp"
                    android:textSize="17dp"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ic_pm10"
                    android:src="@mipmap/ic_bubble_chart_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/pm10"
                    android:id="@+id/textView25"
                    android:layout_margin="4dp"
                    android:textSize="17dp"
                    android:textColor="@android:color/white"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ic_o3"
                    android:src="@mipmap/ic_bubble_chart_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/O3"
                    android:id="@+id/textView26"
                    android:layout_margin="4dp"
                    android:textSize="17dp"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ic_co"
                    android:src="@mipmap/ic_bubble_chart_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/CO"
                    android:id="@+id/textView27"
                    android:layout_margin="4dp"
                    android:textSize="17dp"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0"
                android:id="@+id/psi"
                android:layout_gravity="center_vertical|right"
                android:textSize="17dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0.0"
                android:id="@+id/pm25"
                android:layout_gravity="center_vertical|right"
                android:textSize="17dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0.0"
                android:id="@+id/pm10"
                android:layout_gravity="center_vertical|right"
                android:textSize="17dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0.0"
                android:id="@+id/o3"
                android:layout_gravity="center_vertical|right"
                android:textSize="17dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0.0"
                android:id="@+id/co"
                android:layout_gravity="center_vertical|right"
                android:textSize="17dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="time"
        android:id="@+id/time"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="8dp"
        android:textSize="12dp"
        android:textColor="@android:color/white"/>

</FrameLayout>