<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rect"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginRight="@dimen/main_margin"
        android:layout_marginTop="@dimen/main_margin">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/location"
                android:id="@+id/textView2"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/main_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/tv_location"
                android:layout_weight="1"
                android:layout_margin="@dimen/sub_margin"
                android:layout_gravity="center_vertical" />

            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/progressBar"
                android:indeterminate="false"
                android:layout_gravity="center_vertical" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_location"
                android:src="@mipmap/ic_location"
                android:layout_marginRight="@dimen/main_margin"
                android:layout_gravity="center_vertical"
                android:onClick="onLocationClick" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:id="@+id/imageView4"
            android:background="#ffffff"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rect"
        android:layout_margin="@dimen/main_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pm25"
            android:id="@+id/textView"
            android:layout_gravity="center|bottom"
            android:layout_weight="1"
            android:gravity="bottom"
            android:layout_margin="4dp"
            android:layout_marginBottom="4dp"
            android:textSize="14dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/imageView5"
            android:background="#ffffff" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="2dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="10"
                    android:id="@+id/tv_pm25"
                    android:textSize="50dp"
                    android:layout_gravity="center_horizontal|bottom"
                    android:textColor="@color/color_text_title"
                    android:gravity="bottom"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/tv_site"
                    android:gravity="center_horizontal|bottom"
                    android:layout_gravity="bottom|right"
                    android:layout_marginLeft="8dp" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@mipmap/ic_watch"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/main_margin"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="vertical"
                android:layout_weight="0.5"
                android:paddingLeft="36dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="附近的測站"
                    android:id="@+id/textView3"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="8"
                        android:id="@+id/textView9"
                        android:layout_gravity="center|bottom"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="松山"
                        android:id="@+id/textView8"
                        android:layout_gravity="center|bottom"
                        android:textSize="12dp"
                        android:layout_marginLeft="2dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="8"
                        android:id="@+id/textView7"
                        android:textSize="18dp"
                        android:layout_gravity="bottom"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="松山"
                        android:id="@+id/textView6"
                        android:layout_gravity="center|bottom"
                        android:textSize="12dp"
                        android:layout_marginLeft="2dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="8"
                        android:id="@+id/textView5"
                        android:layout_gravity="center|bottom"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="松山"
                        android:id="@+id/textView4"
                        android:layout_gravity="center|bottom"
                        android:textSize="12dp"
                        android:layout_marginLeft="2dp" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:id="@+id/recycleView"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rect"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginRight="@dimen/main_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/uv"
            android:id="@+id/textView20"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:textSize="14dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:id="@+id/imageView3"
            android:background="#ffffff"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="中"
            android:id="@+id/textView21"
            android:textSize="50dp"
            android:layout_gravity="center_horizontal|bottom"
            android:textColor="@color/color_text_title"
            android:layout_marginBottom="16dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_time"
            android:id="@+id/textView11"
            android:layout_marginLeft="@dimen/main_margin"
            android:layout_marginTop="@dimen/main_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="12:00"
            android:id="@+id/tv_update_time"
            android:layout_marginLeft="@dimen/main_margin" />
    </LinearLayout>

</LinearLayout>